--- a/index.html
+++ b/index.html
@@ -3,58 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ui Web</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>John Doe</h1>
-            <nav>
+    <section>
+        <header class="container">
+            <div class="page-header">
+                <div class="logo">
+                    <a href="#">CG</a>
+                </div>
+                <input type="checkbox" id="click">
+                <label for="click" class="mainicon">
+                    <div class="menu">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
+                </label>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>I am a software engineering student with a passion for artificial intelligence and machine learning.</p>
-            <!-- Add more information about yourself here -->
-        </div>
-    </section>
-
-    <section id="projects">
-        <div class="container">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Project 1</h3>
-                <p>Description of project 1.</p>
+                <li><a href="#" class="active" style="--navAni:1">Home</a></li>
+                <li><a href="#" style="--navAni:2">About</a></li>
+                <li><a href="#" style="--navAni:3">Skills</a></li>
+                <li><a href="#" style="--navAni:4">Portfolio</a></li>
+                <li><a href="#" style="--navAni:5">Contact</a></li>
+            </ul>
+            <label class="mode">
+                <input type="checkbox" id="darkModeToggle">
+                <i class="fa-solid fa-moon"></i>
+            </label>
             </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>Description of project 2.</p>
+        </header>
+        <div class="container">
+            <div class="main">
+                <div class="detail">
+                    <h3>Hi I'm</h3>
+                    <h1>
+                        <span style="color:#52489C;">Charan G</span>
+                    </h1>
+                    <p>
+                        "I'm a Software Engineer based out of Bengaluru, India 🇮🇳"
+                    </p>
+                    <div class="social">
+                        <a href="" style="--socialAni:1"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com/rahul__vaishnav__rj21/ss" style="--socialAni:2"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="" style="--socialAni:3"><i class="fa-brands fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="images">
+                    <img src="img.png" alt="" class="img-w">
+                </div>
             </div>
-            <!-- Add more projects here -->
         </div>
     </section>
-
-    <section id="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <p>You can reach me at john@example.com</p>
-            <!-- Add more contact information or a contact form here -->
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 John Doe. All rights reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
